--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
           src="/file/1"
           alt="Profile Image"
            -->
-        <img src="/images/myprofile.jpg" alt="Profile Picture" onclick="window.location.href='/index.html';" id="profile-image" />
+        <img src="./images/myprofile.jpg" alt="Profile Picture" onclick="window.location.href='/index.html';" id="profile-image" />
 
         <span
           class="upload-btn"
