--- a/public/pages/Contact.html
+++ b/public/pages/Contact.html
@@ -23,10 +23,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-    <style>
-
-
-    </style>
+   
 
     <title>Shiva Rama Krishna | Full Stack Developer</title>
   </head>
@@ -41,11 +38,8 @@
     </label>
 
     <div class="content-wrapper" id="Content-wrapper">
-      <a
-        href="/images/Shiva_Rama_Krishna-Software_Engineer.pdf"
-        id="download-button"
-        download
-      >
+           <a href="/images/Shiva_Rama_Krishna-Software_Engineer.pdf" id="download-button" download>
+
         <button class="btn"><i class="fa fa-download"></i> Download</button>
       </a>
       <div id="dropdown-menu">
@@ -68,7 +62,7 @@
           alt="Profile Image"
            -->
         <img
-          src="/images/myprofile.jpg"
+          src="../images/myprofile.jpg"
           alt="Profile Picture"
           onclick="window.location.href='/index.html';"
           id="profile-image"
