--- a/public/pages/projects.html
+++ b/public/pages/projects.html
@@ -30,7 +30,7 @@
     </label>
 
     <div class="content-wrapper" id="Content-wrapper">
-      <a href="/uploads/resume.pdf" id="download-button" download>
+      <a href="/images/Shiva_Rama_Krishna-Software_Engineer.pdf" id="download-button" download>
         <button class="btn"><i class="fa fa-download"></i> Download</button>
       </a>
        <div id="dropdown-menu">
@@ -53,7 +53,7 @@
           alt="Profile Image"
            -->
         <!-- <img src="/file/1" alt="Profile Picture" id="profile-image" /> -->
-                <img src="/images/myprofile.jpg" alt="Profile Picture" onclick="window.location.href='/index.html';" id="profile-image" />
+                <img src="../images/myprofile.jpg" alt="Profile Picture" onclick="window.location.href='/index.html';" id="profile-image" />
 
         <span
           class="upload-btn"
