My portfolio backend with contact form

--- a/public/index.html
+++ b/public/index.html
@@ -677,7 +677,7 @@
       <h1>Projects</h1>
       <div class="projects">
         <h2>Autonomous Vehicle Object Detection</h2>
-        🚗 Real-Time Object Detection for Autonomous Vehicles (YOLOv8 & YOLOv11)
+        Real-Time Object Detection for Autonomous Vehicles (YOLOv8 & YOLOv11)
         — 90% Complete Designed and trained real-time detection models using
         YOLOv8 and conceptual YOLOv11 for autonomous traffic systems. Achieved
         mAP@0.5 of 0.558, real-time inference speed at ~7.8ms per image, and
@@ -748,16 +748,16 @@
     </div>
     <div id="achievements" class="menu-options">
       <h2>Achievements</h2>
-      📌 Results-driven: I have delivered production-grade applications with
+      Results-driven: I have delivered production-grade applications with
       clear performance metrics and real-world applicability.
       <br />
-      📌 Pattern-savvy: I used of OOP patterns demonstrates depth of
+      Pattern-savvy: I used of OOP patterns demonstrates depth of
       architecture and maintainability.
       <br />
-      📌 AI-integrator: My ability to embed ML/AI into software stacks shows
+      AI-integrator: My ability to embed ML/AI into software stacks shows
       strong cross-disciplinary capabilities.
       <br />
-      📌 Initiative & Leadership: Independently planning, executing, and
+      Initiative & Leadership: Independently planning, executing, and
       deploying multiple high-impact projects highlights your hands-on
       capability.
     </div>
@@ -806,7 +806,7 @@
                 <h2>Let's build something great together.</h2>
                 <p>I'm currently seeking new opportunities as a full-stack developer. If you have a project in mind, a job opportunity, or just want to connect, please use the form below to get in touch!</p>
                 
-                <form action="YOUR_BACKEND_SCRIPT_URL" method="POST" class="contact-form">
+          <form id="contactForm" class="contact-form">
                     <div class="form-group">
                         <label for="name">Name</label>
                         <input type="text" id="name" name="name" required>
@@ -829,6 +829,7 @@
                     
                     <button type="submit" class="submit-btn">Send Message</button>
                 </form>
+                <p id="formResponse"></p>
             </div>
         </section>
         <section id="social-links-section" class="contact-section secondary-section">
