--- a/public/index.html
+++ b/public/index.html
@@ -571,65 +571,92 @@
       <p>AI/ML: YOLOv8, CNN, PyTorch, OpenCV</p>
     </div>
 
-    <div id="Projects" class="menu-options">
-      <h1>Projects</h1>
-      <div class="projects">
-        <h2>Autonomous Vehicle Object Detection</h2>
-        Real-Time Object Detection for Autonomous Vehicles (YOLOv8 & YOLOv11)
-        — 90% Complete Designed and trained real-time detection models using
-        YOLOv8 and conceptual YOLOv11 for autonomous traffic systems. Achieved
-        mAP@0.5 of 0.558, real-time inference speed at ~7.8ms per image, and
-        robust detection across 5+ classes. Integrated CNN-transformer hybrid
-        models and deployed on low-resource edge systems.
-      </div>
+   <section id="Projects" class="menu-options">
+  <h1>Projects</h1>
 
-    </div>
-    <div id="Projects" class="menu-options">
-      <div class="projects">
-        <h2>Java Inventory Management System</h2>
-         Java Inventory Management System — 100% Complete Built a complete
-        inventory management tool in Java using Swing GUI following OOP
-        principles. Applied Observer Pattern for low-stock alerting and Adapter
-        Pattern to integrate incompatible stock sources (ASC/MSM). Utilized Java
-        I/O and CSV parsing for persistent data and user-friendly console-based
-        operations.
-      </div>
-      </div>
-          <div id="Projects" class="menu-options">
+  <article class="project-card">
+    <h2>Autonomous Vehicle Object Detection</h2>
+    <p>
+      Real-Time Object Detection for Autonomous Vehicles 
+      (<strong>YOLOv8 & YOLOv11</strong>) — <em>90% Complete</em>. <br>
+      Designed and trained real-time detection models using YOLOv8 and conceptual YOLOv11 
+      for autonomous traffic systems. Achieved <strong>mAP@0.5 = 0.558</strong>, 
+      real-time inference speed at <strong>~7.8ms/image</strong>, and robust detection 
+      across 5+ classes. Integrated CNN-transformer hybrid models and deployed 
+      on low-resource edge systems.
+    </p>
+    <a href="https://github.com/kurrashivaramakrishna/object-detection-using-YOLO/blob/main/Autonoumous-Vehicle-ObjectDectection-code.ipynb" 
+       class="project-link" 
+       target="_blank" 
+       rel="noopener noreferrer">
+       🔗 View Source Code
+    </a>
+  </article>
 
-      <div class="projects">
-        <h2>AI Snake Game with Reinforcement Learning</h2>
-         AI Snake Game with Reinforcement Learning — 85% Complete Engineered
-        an autonomous Snake game agent using Python, PyGame, and Q-Learning
-        algorithms. Developed environment-state modeling and reward strategy
-        using Deep Q Networks for optimal performance.
-      </div>
-      </div>
-      
-      <div id="Projects" class="menu-options">
-      <div class="projects">
-        <h2>Career Quiz Android App</h2>
-         Career Quiz Android App — 90% Complete Developed using Kotlin,
-        integrated Firebase Authentication, speech recognition, and
-        text-to-speech. Followed MVVM architecture, designed responsive layouts,
-        and implemented multi-level career quiz features.
-      </div>
-    </div>
+  <article class="project-card">
+    <h2>Java Inventory Management System</h2>
+    <p>
+      Java Inventory Management System — <em>100% Complete</em>. <br>
+      Built a complete inventory management tool in Java using Swing GUI following OOP
+      principles. Applied <strong>Observer Pattern</strong> for low-stock alerting and 
+      <strong>Adapter Pattern</strong> to integrate incompatible stock sources (ASC/MSM). 
+      Utilized Java I/O and CSV parsing for persistent data and user-friendly console-based operations.
+    </p>
+    <a href="https://github.com/kurrashivaramakrishna/Java-Stock-Control-System-OOP-with-GUI-Design-Patterns" 
+       class="project-link" 
+       target="_blank" 
+       rel="noopener noreferrer">
+       🔗 View Source Code
+    </a>
+  </article>
 
-    <div id="education" class="menu-options">
-      <h2>Education</h2>
-      <div class="edu-block">
-        <h3>MSc in Computer Science</h3>
-        <p>Teesside University, UK (2023–2025)</p>
-        <p><strong>Grade:</strong> Merit</p>
-      </div>
-      <div class="edu-block">
-        <h3>B.Tech in Electrical & Electronics Engineering</h3>
-        <p>Scient Institute of Technology, RR Dist (2017–2021)</p>
-        <p><strong>Percentage:</strong> 71%</p>
-      </div>
-      
-    </div>
+  <article class="project-card">
+    <h2>AI Snake Game with Reinforcement Learning</h2>
+    <p>
+      AI Snake Game with Reinforcement Learning — <em>85% Complete</em>. <br>
+      Engineered an autonomous Snake game agent using Python, PyGame, and Q-Learning 
+      algorithms. Developed environment-state modeling and reward strategy using 
+      Deep Q Networks for optimal performance.
+    </p>
+    <a href="https://github.com/kurrashivaramakrishna/AI-Snake-Game" 
+       class="project-link" 
+       target="_blank" 
+       rel="noopener noreferrer">
+       🔗 View Source Code
+    </a>
+  </article>
+
+  <article class="project-card">
+    <h2>Career Quiz Android App</h2>
+    <p>
+      Career Quiz Android App — <em>90% Complete</em>. <br>
+      Developed using Kotlin, integrated Firebase Authentication, speech recognition, and 
+      text-to-speech. Followed MVVM architecture, designed responsive layouts, and implemented 
+      multi-level career quiz features.
+    </p>
+    <a href="https://quickresumeaipowered.netlify.app/" 
+       class="project-link" 
+       target="_blank" 
+       rel="noopener noreferrer">
+       Demo App
+    </a>
+  </article>
+</section>
+
+<section id="education" class="menu-options">
+  <h2>Education</h2>
+  <div class="edu-block">
+    <h3>MSc in Computer Science</h3>
+    <p>Teesside University, UK (2023–2025)</p>
+    <p><strong>Grade:</strong> Merit</p>
+  </div>
+  <div class="edu-block">
+    <h3>B.Tech in Electrical & Electronics Engineering</h3>
+    <p>Scient Institute of Technology, RR Dist (2017–2021)</p>
+    <p><strong>Percentage:</strong> 71%</p>
+  </div>
+</section>
+
 
     <div id="experience" class="menu-options">
       <h2>experience</h2>
@@ -676,18 +703,18 @@
       <h2>Languages</h2>
       Telugu Hindi English
     </div>
-    <div id="interests" class="menu-options">
+    <!-- <div id="interests" class="menu-options">
       <h2>interests</h2>
       Problem solving Coding Learning new technologies Open source contributions
       Exploring AI and ML applications Traveling and cultural exchange engaging
       in tech communities
-    </div>
-    <div id="hobbies" class="menu-options">
+    </div> -->
+    <!-- <div id="hobbies" class="menu-options">
       <h2>Hobbies</h2>
       Reading books Playing chess Hiking and outdoor activities Photography
       Cooking and experimenting with new recipes Volunteering in community tech
       initiatives
-    </div>
+    </div> -->
     <div id="progress" class="menu-options">
       <h2>Project Progress Overview</h2>
       <ul>
